updates to the style of posts

--- a/style/custom_light.scss
+++ b/style/custom_light.scss
@@ -1,6 +1,6 @@
 /*-- scss:defaults --*/
 $pale-white: #f8f3f2;
-$light-pink: #d90367d1;
+$light-pink: #800000;
 // Base document colors
 $navbar-bg: transparent;
 $body-bg: $pale-white;
