adding background graph

--- a/style/common_style.css
+++ b/style/common_style.css
@@ -8,7 +8,8 @@
     --light-pink: #{$light-pink};
 }
 
-.nav-footer {
+.nav-footer,
+#quarto-appendix.default {
     background-color: transparent;
 }
 
@@ -72,4 +73,17 @@ body.quarto-dark {
     font-family: "Crimson Text", serif;
     font-weight: 700;
     font-style: italic;
+}
+
+#background-graph {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    will-change: transform;
+    background-size: cover;
+    pointer-events: none;
 }
