update CNAME and change colors

--- a/style/custom_dark.scss
+++ b/style/custom_dark.scss
@@ -2,8 +2,22 @@
 $midnight-blue: #021526;
 $dark-pink: #d90367d1;
 $calm-white: #f8f3f2;
+// Rosé Pine Palette
+$rp-base: #191724;
+$rp-surface: #1f1d2e;
+$rp-overlay: #26233a;
+$rp-muted: #6e6a86;
+$rp-subtle: #908caa;
+$rp-text: #e0def4;
+$rp-love: #eb6f92;
+$rp-gold: #f6c177;
+$rp-rose: #ebbcba;
+$rp-pine: #31748f;
+$rp-foam: #9ccfd8;
+$rp-iris: #c4a7e7;
+$rp-highlight: #21202e;
 // Base document colors
 $navbar-bg: transparent;
-$body-bg: $midnight-blue;
-$body-color: $calm-white;
-$link-color: $dark-pink;
+$body-bg: $rp-base;
+$body-color: $rp-text;
+$link-color: $rp-pine;
